[package]
name = "envoyer"
version = "0.1.0"
authors = ["Cyandev <cyandev@gmail.com>"]
license = "MIT"
edition = "2021"

[features]
default = ["http-service", "logging"]
http-service = ["dep:axum", "dep:tower-http", "tower-http/trace"]
logging = ["dep:tracing-subscriber"]

[dependencies]
paste = "1"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
futures = "0.3"
pin-project-lite = "0.2"
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", optional = true }
home = "0.5"
nix = { version = "0.27", features = ["signal"] }

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["fmt", "env-filter"]

[dependencies.tokio]
version = "1.36"
features = ["rt", "macros", "time", "process", "net"]

[[bin]]
name = "envoyer"
path = "src/main.rs"
